[tool]
[tool.poetry]
name = "rvtools"
version = "0.1.4"
homepage = "https://github.com/tadamcz/rvtools"
description = "Top-level package for Probability distribution and random variable tools."
authors = ["Tom Adamczewski <tadamczewskipublic@gmail.com>"]
readme = "README.md"
classifiers=[
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "rvtools" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
betapert = {git = "https://github.com/tadamcz/betapert", rev="main"}
copula-wrapper = {git = "https://github.com/tadamcz/copula-wrapper", rev="main"}

[tool.poetry.group.dev.dependencies]
bump2version = "*"
coverage = "*"
pytest = ">=7.2.0"
pytest-pycharm = "*"
black = {extras = ["d"], version = "*"}
mkcodes = "^0.1.1"
matplotlib = "^3.7.1"
# python_maximum_signature_line_length parameter should be released in sphinx 7.1.0.
# Until then, get the latest version from git.
sphinx = {git = "https://github.com/sphinx-doc/sphinx", rev="d3c91f951255c6729a53e38c895ddc0af036b5b9"}
sphinx-autobuild = "^2021.3.14"



[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
